--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,67 @@
 :root {
+  --black: #000;
+  --white: #fff;
+  --red-primary: #e50914;
+  --red-primary-dark: #bf0710;
+  --bg-black: #000;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: auto;
+  background-color: var(--bg-black);
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+/* Navbar styles */
+.navbar {
+  border-bottom: solid 1px #fff;
+}
+
+.navbar .navbar-nav li {
+  list-style: none;
+}
+
+.navbar .navbar-nav .nav-link,
+.navbar .navbar-nav .nav-btn {
+  text-decoration: none;
+  color: var(--white);
+  position: relative;
+}
+
+.navbar .navbar-nav .nav-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  height: 3px;
+  width: 0px;
+  border-radius: 2px;
+  background-color: var(--red-primary);
+  transition: 0.4s ease-in;
+}
+
+.navbar .navbar-nav .nav-link:hover::after {
+  width: 100%;
+}
+
+.navbar .navbar-nav .nav-btn {
+  padding: 8px 16px;
+  margin: auto;
+  background-color: var(--red-primary-dark);
+  outline: none;
+  text-transform: uppercase;
+}
+
+.navbar .navbar-nav .nav-btn:hover {
+  background-color: var(--red-primary);
 }
