--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,10 @@ body {
   background-color: var(--bg-black);
 }
 
+.container {
+  padding: 0 1.5rem;
+}
+
 .ml-auto {
   margin-left: auto;
 }
@@ -72,10 +76,14 @@ body {
   padding-right: 0;
 }
 
+.carousel {
+  height: auto !important;
+}
+
 .carousel-column {
-  height: 500px;
+  height: inherit;
   width: 900px;
-  margin: 0 auto;
+  margin: 2.5rem auto;
 }
 
 .carousel-inner .carousel-item img {
@@ -91,5 +99,70 @@ body {
 @media screen and (max-width: 480px) {
   .carousel-inner .carousel-item img {
     height: 210px;
+  }
+}
+
+.top-rated,
+.new-releases {
+  margin: 2rem 0;
+}
+
+.top-rated .block,
+.new-releases .block {
+  border-left: 4px solid var(--red-primary-dark);
+  padding-left: 1rem;
+}
+
+/* Slider styles */
+.slider {
+  display: flex;
+  overflow-x: scroll;
+  padding: 24px 0;
+  scroll-snap-type: x mandatory;
+  scroll-padding: 24px;
+  gap: 12px;
+}
+
+.slider .card {
+  flex: 0 0 16.66%;
+  scroll-snap-align: start;
+  background-color: transparent;
+}
+
+.slider .card img {
+  width: inherit;
+  height: 330px;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.slider::-webkit-scrollbar {
+  display: none;
+}
+
+@media screen and (max-width: 1200px) {
+  .slider .card {
+    flex: 0 0 25%;
+  }
+  .slider .card img {
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .slider .card {
+    flex: 0 0 41.66%;
+  }
+  .slider .card img {
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .slider .card {
+    flex: 0 0 58.33%;
+  }
+  .slider .card img {
+    height: 250px;
   }
 }
