--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px,
     rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .slider .card img {
@@ -137,6 +138,10 @@ body {
   height: 330px;
   overflow: hidden;
   border-radius: 8px 8px 0 0;
+}
+
+.slider .card img:hover {
+  opacity: 0.8;
 }
 
 .slider::-webkit-scrollbar {
@@ -169,6 +174,10 @@ body {
   border-radius: 4px;
   color: var(--red-primary);
   font-weight: bolder;
+}
+
+.slider .card .card-body button:hover {
+  background-color: rgba(255, 255, 255, 0.15);
 }
 
 @media screen and (max-width: 1200px) {
